<?php
/**
 * 验证码发送
 * @param $mobile 手机号码
 * @param $content 发送内容
 * @param $type 验证码类型
 */
function send_sms($mobile,$content,$type=''){

}


/**
 * 面包屑导航  用于前台用户中心
 * 根据当前的控制器名称 和 action 方法
 */
function navigate_user()
{    
    $navigate = include APP_PATH.'home/navigate.php';    
    $location = strtolower('Home/'.CONTROLLER_NAME);
    $arr = array(
        '首页'=>'/',
        $navigate[$location]['name']=>U('/Home/'.CONTROLLER_NAME),
        $navigate[$location]['action'][ACTION_NAME]=>'javascript:void();',
    );
    return $arr;
}

/**
*  面包屑导航  用于前台商品
 * @param type $id 商品id  或者是 商品分类id
 * @param type $type 默认0是传递商品分类id  id 也可以传递 商品id type则为1
 */
function navigate_goods($id,$platform,$lang,$type = 0)
{
    $cat_id = $id; //
    // 如果传递过来的是
//    if($type == 1){
//        $cat_id = M('goods')->where("goods_id", $id)->getField('cat_id');
//    }
    $cat = new Psp\Newhome\Platform();
    $cat->setLanguage($lang);
    $cat->setPlatform($platform);
    list($res,$status) = GRPC('NewGoodsList')->GetCat($cat)->wait();
    foreach ($res->getCatList() as $k => $v) {
        $k = $v->getCategoryId();
        $cat_list[$k]['category_id'] = $v->getCategoryId();
        $cat_list[$k]['name'] = $v->getName();
        $cat_list[$k]['parent_id'] = $v->getParentId();
    }
    $categoryList = $cat_list;//M('GoodsCategory')->getField("id,name,parent_id");

    // 第一个先装起来
    $arr[$cat_id] = $categoryList[$cat_id]['name'];
    while (true)
    {
        $cat_id = $categoryList[$cat_id]['parent_id'];
        if($cat_id > 0 && $cat_id!=$id)
            $arr[$cat_id] = $categoryList[$cat_id]['name'];
        else
            break;
    }
    $arr = array_reverse($arr,true);
    return $arr;
}

function promote_goods_id(){
    $goods_id = '703597,703760,703766,703777,703786,703416,801548,801549,801664,801665,703590,703481,703484,703486,703487,703488,703489,703490,
                 703491,701977,701975,701955,701947,701945,801868,801867,801865,801864,800599,24901,22656,2591,2796,5472,5473,703879,702133,
                 802204,801370,801369,801717,801710,9501,701460,801426,801425,801428,801427,801467,700358,700357,32089,801964,801830,801828,
                 11687,11685,9509,700246,700250,700192,700193,700194,700195,700197,700200,700201,800493,800494,800497,800498,702443,702451,32160,
                 700321,800516,800069,800574,800583,800117,31184,31854,701614,801730,801729,22373,21185,22117,25275,31780,23535,30617,31519,25300,
                 25301,32587,32581,32583,32574,32570,32577,10318,10325,10292,10291,800139,800142,800143,800141,800146,800151,800195,801496,800276,
                 800279,22373,21185,22117,25275,31780,23535,30617,31519,25300,25301,32587,32581,32583,32574,32570,32577,10318,10325,10292,10291,800139
                 ,800142,800143,800141,800146,800151,800195,801496,800276,800279,801803,801797,801795,703526,703437,703433,801800,802530,802531,802533,
                 802536,802537,802538,702005,702002,702004,22373,21185,22117,25275,31780,23535,30617,31519,25300,25301,32587,32581,32583,32574,32570,32577,
                 10318,10325,10292,10291,800139,800142,800143,800141,800146,800151,800195,801496,800276,800279,801803,801797,801795,703526,703437,703433,801800,
                 802530,802531,802533,802536,802537,802538,702005,702002,702004,702121,702106,702102,702098,13501,13507,13511,16966,16967,13554,
                 13556,13559,13566,801365,801240,10992,10996,700693,701103,700692,801586,31205,801603,31107,800752,800756,31206,704051,702852,801487,
                 701084,701089,701093,701088,701086,703977,703978,703985,703992,702369,20779,20778,20776,20775,20774,20773,20770,20753,20751,20749,20748,20747,
                 20743,20741,13306,801003,800991,800987,800968,800956,800955,800952,800923,703237,703230,703215,703210,703207,703234,703219,703213,703209,703205,800618,
                 800867,800691,701748,701745,701747,701742,702344,702347,802440,703529,702910,702671,702681,703671,703689,703675,32706,32709,32713,39493,39495,39670,39674,
                 39675,39737,32712,32710,701984,701990,703370,703695,703698,703495,703493,703558,801112,801111,801116,801117,801118,801322,801337,801349,802037,802035,702457,
                 702288,702286,702241,702278,702280,702291,801821,802067,802064,802069,800807,801872,701950,701949,703641,802054,802050,700510,800177,700448,700447,700437,
                 801998,801773,700301,700300,801736,801737,801741,801757,801756,703955,703954,703951,703410,703319,703252,703269,703325,703343,702368,702381,702386,702571,
                 702578,801708,801686,801689,801690,701488,702261,800903,801913,801378,801376,801375,801377,802128,801488,801788,34194,17546,801140,801869,701984,701990,
                 800599,800139,800142,800143,800141,800146,800151,800195,801496,800276,800279,801680,801655,801662,801659,801657,703378,703383,703386,703388,801934,801935,
                 801933,703389,703392,703409,703400,703405,703729,703728,703726,703722,703717,703680,703699,703702,703708,703709,703710,800946,800951,802392,802395,802406,
                 802408,802410,802411,802581,802414,802417,802420,802423,802432,802436,802437,800547,801844,801843,801585,13194,19328,701770,701771,701772,800605,800635,
                 800818,800742,800694,700363,802592,802591,802593,802638,14350,800870,800876,800878,800879,800880,300107,300103,702953,702937,702964,702693,702719,702706,
                 702720,702696,702721,702691,703111,703103,703105,703112';

    return $goods_id;
}
 